# first-django-admin

./: .gitignore  Makefile  Pipfile  README.md  academy_invites_2014.csv  pyproject.toml  requirements.txt
.github/workflows/: docs.yaml
docs/: Makefile  admin.md  conf.py  django.md  dumper.md  homework.md  index.md  index.rst  loader.md  make.bat  mkdocs.yaml  models.md  newsroom.md  prereq.md  requirements.txt  what.md
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  index.txt
first_django_admin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
project/: academy_invites_2014.csv  db.sqlite3  dump.csv
project/academy/: admin.py  apps.py  models.py
project/academy/management/commands/: dumpacademycsv.py  loadacademycsv.py
project/academy/migrations/: 0001_initial.py  0002_invite_reporter.py
project/project/: settings.py
